tests/rosetta/out/Rust/apply-a-callback-to-an-array-2.error
rustc: exit status 1
error[E0277]: cannot multiply `i32` by `String`
  --> /tmp/apply-a-callback-to-an-array-2.rs:17:76
   |
17 | ...   each(s, Box::new(move |i: i32| println!("{}", vec![format!("{}", i * i.to_string())].into_iter().filter(|s| !s.is_empty()).collect:...
   |                                                                          ^ no implementation for `i32 * String`
   |
   = help: the trait `Mul<String>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&i32` implements `Mul<i32>`
             `&i32` implements `Mul`
             `i32` implements `Mul<&i32>`
             `i32` implements `Mul`

error[E0308]: mismatched types
  --> /tmp/apply-a-callback-to-an-array-2.rs:17:40
   |
17 | ...i32| println!("{}", vec![format!("{}", i * i.to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") )));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `()`
   |
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/apply-a-callback-to-an-array-2.rs:18:81
   |
18 | ..., Box::new(move |i: i32| i * i)).to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                     ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
